# EEE380

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  platformio.ini  pyproject.toml
.github/workflows/: autoci.yml  autoformat.yml  autotest.yml  coverage.yml
fd_detector/: fd_eye.py  fd_head.py  fd_mouth.py  fd_ui.py  main.py
fd_detector/dlib/: main.py
fd_driver/lib/: README.md
fd_driver/src/: main.cpp
fd_server/: fd_stt.py  fd_tts.py  main.py
fd_server/static/: index.html  style.css
scripts/: opencv-4-5-4.sh
src/: main.cpp
tests/: test_template.py
