[tool.poetry]
name = "EEE380"
version = "0.1.0"
description = "Fatigue Detection"
authors = ["Alex <30626291+Spehhhhh@users.noreply.github.com>"]
maintainers = ["Alex <30626291+Spehhhhh@users.noreply.github.com>"]
license = "GNU"
readme = "README.md"
homepage = ""
documentation = ""
keywords = [
    "Fatigue Detection",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
# Static Type Checker
mypy = "^0.930"
# Linter
pylint = "^2.12.2"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
mccabe = "^0.6.1"
pyflakes = "^2.4.0"
# Formatter
black = "^21.12b0"
isort = "^5.10.1"
# Unit Testing
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = {version = "^6.2", extras = ["toml"]}
# Automation
nox = "^2021.10.1"
nox-poetry = "^0.9.0"
# Build
# Other dependencies
loguru = "^0.5.3"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
omit = [".*", "*/site-packages/*","*/__init__.py", "*/__main__.py","*/tests", "*/excp.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
src_paths = ["fatigue-detection"] # Inform isort of paths to import names that should be considered part of the "First Party" group.
skip_gitignore = true
extend_skip_glob=[".*", "*/site-packages/*","*/__init__.py", "*/__main__.py","*/tests", "*/excp.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
